--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,7 +23,7 @@ website:
           href: about.qmd
       right:
         - icon: github
-          href: https://github.com/jfronc
+          href: https://github.com/jfronc/jfronc.cz
 
 format:
   html:
