--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -9,6 +9,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        
       - name: Render site
         uses: quarto-dev/quarto-actions/render@v2
         with:
