--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -11,7 +11,12 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        
+
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
       - name: Render site
         uses: quarto-dev/quarto-actions/render@v2
         with:
